<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:layoutDirection="rtl"
    tools:context=".ui.login.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_help"
            style="@style/TextAppearance.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xlarge"
            android:layout_marginTop="@dimen/xlarge"
            android:layout_marginEnd="@dimen/xlarge"
            android:layout_marginBottom="@dimen/xlarge"
            android:text="لطفا موارد خواسته شده را وارد و دریافت کد را بزنید."
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_terminal_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xlarge"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_help">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_terminal_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789"
                android:hint="@string/lbl_terminal_number"
                android:inputType="phone"
                android:lines="1"
                android:singleLine="true"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xlarge"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_terminal_number">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789"
                android:hint="@string/lbl_cell_number"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="11"
                android:singleLine="true"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_call_support"
            style="@style/Widget.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touchable_item_size"
            android:layout_margin="@dimen/xlarge"
            android:text="@string/lbl_call_supporter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_phone_number" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_receive_code"
            style="@style/Widget.Button.Large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touchable_item_size"
            android:layout_margin="@dimen/xlarge"
            android:text="دریافت کد"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_call_support"
            app:layout_constraintVertical_bias="1.0" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>