...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.mukesh.OtpView
            android:id="@+id/et_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xlarge"
            android:inputType="numberPassword"
            android:textColor="@color/colorOnSurface"
            app:OtpItemCount="4"
...
