...
    <string name="lbl_terminal_number">شماره ترمینال</string>
    <string name="lbl_regsiter">ثبت‌نام</string>
    <string name="lbl_phone">موبایل</string>
    <string name="lbl_number">شماره</string>
    <string name="lbl_cell_number">شماره موبایل</string>
    <string name="lbl_request_roll">شماره ترمینال خود را وارد کنید و درخواست را بزنید.</string>
    <string name="lbl_request">درخواست</string>
    <string name="lbl_try_again">تلاش مجدد</string>
    <string name="lbl_call_supporter">تماس با پشتیبانی</string>
    <string name="lbl_requests_history">تاریخچه درخواست‌ها</string>
    <string name="lbl_transaction_report">ریز تراکنش</string>
    <string name="lbl_totally_transaction_report">سرجمع تراکنش</string>
    <string name="lbl_balance">مانده گیری</string>
...
